Improve api doc. Contact create/save add company_id allways. Calendar model with basic fields definition
